# ros2_amr_mecanumbot

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: BEFORE_UPLOAD.md  DEPLOYMENT_JETSON.md  IDEAS.md  PROJECT_BACKGROUND.md  REAL_ROBOT_QUICKSTART.md
docs/images/: .gitkeep
docs/real_robot/: .gitkeep
hardware/: HARDWARE_ARCHITECTURE.md  README.md
hardware/docs/: PROTOCOL.md
hardware/jetson/: README.md
hardware/stm32/: Makefile  README.md  main.c  main_host  main_host.c
hardware/stm32/Core/: motor_lift_stub.c  protocol.c  protocol.h
src/mecanum_bringup/: CMakeLists.txt  package.xml
src/mecanum_bringup/launch/: sim_bringup.launch.py
src/mecanum_control/: CMakeLists.txt  package.xml
src/mecanum_control/include/mecanum_control/: mecanum_kinematics.hpp
src/mecanum_control/launch/: control.launch.py  test_kinematics.launch.py
src/mecanum_control/mecanum_control/: lift_controller.py  mecanum_kinematics.py  wheel_speed_monitor.py
src/mecanum_control/src/: mecanum_drive_node.cpp  mecanum_kinematics.cpp
src/mecanum_control/test/: test_kinematics.cpp
src/mecanum_control/worlds/: test_kinematics.world
src/mecanum_description/: CMakeLists.txt  package.xml
src/mecanum_description/config/: lift_controllers.yaml
src/mecanum_description/launch/: display.launch.py
src/mecanum_description/urdf/: mecanum_amr.urdf.xacro
src/mecanum_hw_bridge/: CMakeLists.txt  package.xml
src/mecanum_hw_bridge/config/: hw_bridge.yaml
src/mecanum_hw_bridge/launch/: hw_bridge.launch.py  real_robot_bringup.launch.py
src/mecanum_hw_bridge/mecanum_hw_bridge/: __init__.py  hw_bridge_node.py  kinematics.py
src/mecanum_hw_bridge/test/: test_kinematics.py
src/mecanum_navigation/: CMakeLists.txt  README_NAV2_TEST.md  package.xml
src/mecanum_navigation/config/: mapping.rviz  nav2_params.yaml  navigation.rviz  slam_params.yaml
src/mecanum_navigation/launch/: navigation.launch.py  test_mapping_nav.launch.py  test_mapping_slam.launch.py
src/mecanum_navigation/maps/: warehouse_map.pgm  warehouse_map.yaml
src/mecanum_navigation/worlds/: test_mapping.world
src/mecanum_simulation/: CMakeLists.txt  README.md  package.xml
src/mecanum_simulation/launch/: gazebo.launch.py
src/mecanum_simulation/models/qr_station_loading_1/: model.sdf
src/mecanum_simulation/models/qr_station_loading_1/materials/scripts/: qr_station_loading.material
src/mecanum_simulation/models/qr_station_loading_2/: model.config  model.sdf
src/mecanum_simulation/models/qr_station_loading_2/materials/scripts/: qr_station_loading.material
src/mecanum_simulation/models/qr_station_loading_3/: model.sdf
src/mecanum_simulation/models/qr_station_loading_3/materials/scripts/: qr_station_loading.material
src/mecanum_simulation/models/qr_station_loading_4/: model.sdf
src/mecanum_simulation/models/qr_station_loading_4/materials/scripts/: qr_station_loading.material
src/mecanum_simulation/models/qr_station_loading_5/: model.sdf
src/mecanum_simulation/models/qr_station_loading_5/materials/scripts/: qr_station_loading.material
src/mecanum_simulation/worlds/: empty.world  minimal.world  warehouse.world
src/mecanum_task_manager/: CMakeLists.txt  package.xml
src/mecanum_task_manager/config/: warehouse_patrol_waypoints.yaml
src/mecanum_task_manager/launch/: task_manager.launch.py
src/mecanum_task_manager/mecanum_task_manager/: patrol_manager.py  qr_reader.py  simple_patrol.py  state_machine.py  task_manager.py
src/mecanum_task_manager/worlds/: test_line_following.world
