<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_bringup</name>
  <version>1.0.0</version>
  <description>Top-level launch files and configurations for the Mecanum AMR system</description>
  <maintainer email="your@email.com">Tarik Kahraman</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>mecanum_description</exec_depend>
  <exec_depend>mecanum_navigation</exec_depend>
  <exec_depend>mecanum_control</exec_depend>
  <exec_depend>mecanum_task_manager</exec_depend>
  <exec_depend>mecanum_simulation</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
