<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_hw_bridge</name>
  <version>1.0.0</version>
  <description>ROS 2 to STM32 UART bridge for real robot: forwards /cmd_vel and lift commands to the motor driver MCU.</description>
  <maintainer email="your@email.com">Tarik Kahraman</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
